style.css
body{
    font-size: 62.5%;
    margin: 0;
    text-align: center;
    background-color: white;
}


/*mobile screen and general properties*/


h1,
h2,
p,
ul,
label,
.slide-text{
    font-family: "Roboto", sans-serif;
}

h1{
    font-size: 1.8rem;
    color: forestgreen;
}

h1+p{
    font-size: 1.5rem;
}

ul{
    list-style: none;
}

a{
    text-decoration: none;
}



nav{
    position: fixed;
    display: flex;
    flex-direction: row-reverse;
    justify-content: space-between;
    align-items: center;
    top: 0;
    left: 0;
    background-color: white;
    width: 100%;
    height: 100px;
    z-index: 3;
}    



#menuToggle{
    display: block;
    position: relative;
    top: -8px;
    right: -21px;
    -webkit-user-select: none;
    z-index: 1;
}

#menuToggle input{
    display: block;
    width: 40px;
    height: 32px;
    position: absolute;
    top: -7px;
    right: -5px;
    cursor: pointer;
    opacity: 0;
    z-index: 2;
}

#menuToggle i{
    display: block;
    width: 33px;
    height: 4px;
    margin-bottom: 5px;
    position: relative;
    border-radius: 3px;
    z-index: 1; 
}

#menuToggle input:checked ~ i{
    opacity: 1;
    transform: rotate(90deg) translate(-2px, -1px);
}

.main-navigation{
    font-size: 1rem;
    position: absolute;
    width: 100%;
    margin: -100px 0 0 -20px;
    padding: 125px 70px 70px 70px;
    background: white;
    opacity: 0.9;
    transform-origin: 0% 0%;
    transform: translate(-100%, 0);
    transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
}

.main-navigation li{
    padding: 20px 0;
}

#menuToggle input:checked ~ ul{
    transform: none;
}


/* SLIDESHOW */


#slideshow{
	width: 100%;
  	margin-top: 100px;
  	justify-content: center;
}


img{
	max-width: 100%;
    height: 400px;
}


.fa-chevron-left{
    display: block;
    align-items: center;
    position: absolute;
    top: 45%;
    left: 0;
    color: white;
    font-size: 0.8rem;
    border-bottom-right-radius: 17px;
    border-top-right-radius: 17px;
    background-color: rgba(0, 0, 0, 0.5);
    padding: 10px 10px 10px 5px;
    z-index: 1;
}

.fa-chevron-right{   
    position: absolute;
    top: 45%;
    right: 0;
    color: white;
    font-size: 0.8rem;
    border-bottom-left-radius: 17px;
    border-top-left-radius: 17px;
    background-color: rgba(0, 0, 0, 0.5);
    padding: 10px 5px 10px 10px;
    z-index: 1;
}

.fa-chevron-left:hover, .fa-chevron-right:hover{
	background-color: rgba(0,0,0,1);
}


.slide{
	display: block;
}

.slide-text{
	color: black;
  	font-size: 15px;
 	padding: 8px 12px;
  	bottom: 8px;
  	text-align: center;
}

.monitoring-dots{
    display: flex;
    justify-content: center;
    text-align: center;
    margin-bottom: 15px;
}

.dot{
	cursor: pointer;
  	height: 25px;
  	width: 25px;
  	margin: 0 2px;
  	border-radius: 50%;
  	display: inline-block;
  	transition: background-color 0.6s ease;

}

#stop-defil{
    margin-top: 15px;
    font-size: 1.2rem;
    color: white;
    background-color: #FC4205;
    padding: 0.3rem;
    border-radius: 5px;
}



/*animated fading*/

.fade{
  	-webkit-animation-name: fade;
  	-webkit-animation-duration: 1.5s;
  	animation-name: fade;
  	animation-duration: 1.5s;
}

@-webkit-keyframes fade{
  	from {opacity: .4} 
  	to {opacity: 1}
}

@keyframes fade{
  	from {opacity: .4} 
  	to {opacity: 1}
}


/* SLIDESHOW ENDS */



/* INTERACTIVE MAP + BOOKING FORM */

#station-location{
    display: flex;
    flex-wrap: wrap;
    margin-bottom: 50px;
}

/* Map */ 

#map {
    display: block;
    height: 400px;
    min-width: 90%;
    border: 2px solid black;
    margin-top: 30px;
    margin-left: auto;
    margin-right: auto;
    z-index: 1;
}


/* Form */

#booking{
    display: none;
    height: 400px;
    min-width: 70%;
    border: 2px solid black;
    margin-top: 30px;
    margin-left: auto;
    margin-right: auto;
    z-index: 1;
}

.liste{
    font-size: 0.8rem;
    text-align: left;
    line-height: 4;
    font-weight: bold;
}


form {
    display: flex;
    flex-direction: column;
    position: relative;
    margin: 0 auto;
    top: -340px;
    height: 330px;
    width: 90%;
    padding: 10px;
    background-color: darkgrey;
    color: black;

}


#button-check + label{
    position: relative;
    top: 50px;
    font-size: 1.5rem;
    color: white;
    background-color: #4B9E58;
    padding: 0.3rem;
    border-radius: 5px;
}

form,
[type="checkbox"] {
    display: none;
}

[type="checkbox"]:checked ~ form {
    display: flex;
}

form>label{
    font-size: 1rem;
}

#validate {
    position: relative;
    top: 5px;
    font-size: 1.5rem;
    color: white;
    background-color: mediumvioletred;
    border-radius: 5px;
}

canvas{
    display: flex;
    position: relative;
    top: -5px;
    margin: 0 auto;
    border: 3px solid mediumvioletred;
    background-color: antiquewhite;
}

.directive{
    font-size: 0.8rem;
    font-weight: bold;
}


/* CONFIRMED RESERVATION PART */



#noBooking{
    font-size: 2rem;
}

#bookingConfirmed{
    display: none;
    position: relative;
    width: 80%;
    margin: 0 auto;
    font-size: 1.5rem;
    color: white;
    background-color: dodgerblue;
    border-radius: 5px;
}

footer{
    display: flex;
    justify-content: space-around;
    align-items: center;
    height: 150px;
    background-color: darkgrey;
}

.fa-facebook{
    color: midnightblue;
    font-size: 3rem;
}

.fa-twitter{
    color: royalblue;
    font-size: 3rem;
}

#footerText{
    font-size: 1.2rem;
}


/*------BREAKPOINTS------*/

/*pad screen*/

@media screen and (min-width: 768px){ 


nav{
    flex-direction: row;
    justify-content: space-around;
}

#menuToggle{
    display: flex;
    top: 0;
    right: 0;
}

#menuToggle i,
#menuToggle input{
    display: none;
}

.main-navigation{
    display: flex;
    position: inherit;
    margin: inherit;
    padding: inherit;
    transform: none;
    transition: none;
}

.main-navigation li{
    margin: 20px;
}

.main-navigation a:hover,
.main-navigation a:checked {
    border-top: 3px solid #5cacd2;
    padding-top: 38px;
}



.fa-chevron-left{
    font-size: 0.8rem;
    border-bottom-right-radius: 20px;
    border-top-right-radius: 20px;
    padding: 10px 10px 10px 2px;
    z-index: 1;
}

.fa-chevron-right{   
    font-size: 0.8rem;
    border-bottom-left-radius: 20px;
    border-top-left-radius: 20px;
    padding: 10px 2px 10px 10px;
    z-index: 1;
}



}

/*desktop screen*/

@media screen and (min-width: 968px){



.fa-chevron-left{
    font-size: 1.6rem;
    border-bottom-right-radius: 50px;
    border-top-right-radius: 50px;
    padding: 20px 20px 20px 5px;
    z-index: 1;
}

.fa-chevron-right{   
    font-size: 1.6rem;
    border-bottom-left-radius: 50px;
    border-top-left-radius: 50px;
    padding: 20px 5px 20px 20px;
    z-index: 1;
}


#map{
    min-width: 55%;
}

#booking{
    min-width: 40%;
}




}

